really fix issue with header bottom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .header {
   padding-top:10px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   height: 150px;
   border-bottom: 1px solid #ccc;
   margin-left: 25%;
